--- a/lab 2/task_1.ipynb
+++ b/lab 2/task_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def lotka_volterra(t, x, y, a11, a12, a21, a22):\n",
+    "def lotka_volterra(x, y, a11, a12, a21, a22):\n",
     "    dx_dt = a11 * x - a12 * x * y\n",
     "    dy_dt = a21 * x * y - a22 * y\n",
     "    return dx_dt, dy_dt\n",
@@ -34,10 +34,10 @@
     "        t = t_values[i]\n",
     "        x, y = x_values[i], y_values[i]\n",
     "        \n",
-    "        k1x, k1y = lotka_volterra(t, x, y, a11, a12, a21, a22)\n",
-    "        k2x, k2y = lotka_volterra(t + h/2, x + h/2 * k1x, y + h/2 * k1y, a11, a12, a21, a22)\n",
-    "        k3x, k3y = lotka_volterra(t + h/2, x + h/2 * k2x, y + h/2 * k2y, a11, a12, a21, a22)\n",
-    "        k4x, k4y = lotka_volterra(t + h, x + h * k3x, y + h * k3y, a11, a12, a21, a22)\n",
+    "        k1x, k1y = lotka_volterra(x, y, a11, a12, a21, a22)\n",
+    "        k2x, k2y = lotka_volterra(x + h/2 * k1x, y + h/2 * k1y, a11, a12, a21, a22)\n",
+    "        k3x, k3y = lotka_volterra(x + h/2 * k2x, y + h/2 * k2y, a11, a12, a21, a22)\n",
+    "        k4x, k4y = lotka_volterra(x + h * k3x, y + h * k3y, a11, a12, a21, a22)\n",
     "        \n",
     "        x_values[i + 1] = x + h * (k1x + 2 * k2x + 2 * k3x + k4x) / 6\n",
     "        y_values[i + 1] = y + h * (k1y + 2 * k2y + 2 * k3y + k4y) / 6\n",
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Параметри\n",
-    "a11 = 0.15\n",
-    "a12 = 0.0015\n",
-    "a21 = 0.0015\n",
-    "a22 = 0.6\n",
+    "a11 = 0.15 # коеф збільшення зайців за відсутності вовків\n",
+    "a12 = 0.0015 # коеф зменшення зайців при зустрічі з вовками\n",
+    "a21 = 0.0015 # коеф збільшення вовків, якщо є зайці\n",
+    "a22 = 0.6 # коеф зменшення вовків за відсутності зайців\n",
     "x0 = 850\n",
     "y0 = 550\n",
     "t0 = 0\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
